// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 cEmFwf"
    color="primary"
  />
</div>
`;

exports[`Label should render a large one 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 kaOebo"
    color="primary"
  />
</div>
`;

exports[`Label should render a small one 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 cEmFwf"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 kBUHuJ"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid and danger 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 dXueiu"
    color="danger"
  />
</div>
`;

exports[`Label should render as solid and default 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 ftOOah"
    color="neutral"
  />
</div>
`;

exports[`Label should render as solid and success 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 kBUHuJ"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid and success 2`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 gXsiCF"
    color="success"
  />
</div>
`;

exports[`Label should render danger color 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 ganlOQ"
    color="danger"
  />
</div>
`;

exports[`Label should render neutral color 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 hwYqMc"
    color="neutral"
  />
</div>
`;

exports[`Label should render primary color 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 cEmFwf"
    color="primary"
  />
</div>
`;

exports[`Label should render success color 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 fMWESr"
    color="success"
  />
</div>
`;

exports[`Label should render warning color 1`] = `
<div>
  <div
    class="Label-sc-1tj9hzr-0 hwYqMc"
    color="warning"
  />
</div>
`;
